# neo-command

./: .gitignore  LICENSE  PLAYBOOK.md  README.md  index.html  main.py  medscope-ghana-v4.html  pyproject.toml
agent/tools/: __init__.py  explore_tools.py  graph_tools.py  search_tools.py  text_tools.py  vocab_tools.py
apps/web/: package-lock.json  package.json
data/: fdr-data-schema.md  geocode_cache.json  knowledge_graph.gpickle  knowledge_graph.graphml  knowledge_graph_meta.json  normalization_cache.json
docs/: NEO 1 PAGER.docx  PRODUCT-SPEC.md  PRODUCT-SPEC2.md  SETUP.md  agents-and-must-haves.txt  detailed-product-spec.md  main-problem-definition.txt  neo-design-doc.txt  neo.txt  spec1.txt
docs/design/: medscope-ghana-v4.html
docs/plans/: 2026-02-08-revised-backend-implementation.md  2026-02-08-virtuecommand-backend-design.md  2026-02-08-virtuecommand-backend-implementation.md  2026-02-08-virtuecommand-pipeline-design.md  2026-02-08-virtuecommand-product-spec-implementation.md
graph/: README.md  __init__.py  build_graph.py  desert.py  geocode.py  normalize.py  queries.py
graph/config/: ghana.py
prompts/: analyst.md  explorer.md  fact-agent.md  planner.md  rag-agent.md  self-rag-agent.md  supervisor.md  tools.md  verifier-tools.md  verifier.md
specs/: data-model.md  neo-skeleton.md  tools.md  user-stories.md  virtuecommand-spec.md
src/agent/: __init__.py  analyst.py  explorer.py  fact_agent.py  planner.py  rag_agent.py  runner.py  self_rag_agent.py  supervisor.py  verifier.py
src/graph/: build_graph.py  desert.py  export.py  geocode.py  inference.py  medical_requirements.py  normalize.py  queries.py  schema.py
src/models/: enums.py  facility.py
src/pipeline/: clean.py  embed.py  fingerprint.py  geocode.py  paths.py  run.py  upload.py
src/server/: agents.py  app.py  config.py  medical_knowledge.py  models.py  tools.py  tracing.py
tests/server/: test_agent_responses.py  test_config.py  test_databricks.py  test_facilities.py  test_genie.py  test_health.py  test_medical_knowledge.py  test_models.py  test_must_have.py  test_plan.py  test_retrieval.py  test_search.py  test_sse.py  test_sse_payload.py  test_tools.py  test_trace.py  test_triage.py  test_vector_adapter.py  test_vector_store.py  test_verify.py  test_warehouse.py
(+44 files in other folders)
